	* Documentation/NuttShell.html:  Update per recommendations from Max
	  Kriegleder (2014-3-6).
	* configs/pic32-starterkit, pic32mx7mmb, stm3210e-eval, stm3220g-eval,
	  and stm3240g-eval:  Refresh all configurations with the latest
	  Kconfig files (2014-3-7).
	* configs/qemu-i486/src:  Files renamed to correspond with current
	  thinking about naming (2014-3-8).
	* arch/x86/src/qemu/qemu_keypad.c and qemu_vga.c:  New QEMU keyboard
	  and VGA drivers from Lizhuoyi (2014-3-8).
	* configs/olimex-lpc2378/src:  Files renamed to correspond with current
	  thinking about naming (2014-3-8).
	* arch/arm/src/lpc2378/lpc23xx_i2c.c and lpc23xx_spi.c:  I2C and SPI
	  drivers for the LPC23xx from Lizhuoyi (2014-3-8).
	* arch/arm/include/tiva and src/tiva:  The old lm/ directories were
	  renamed tiva/ to better support new products coming down the pipe
	  from TI (2014-3-8).
	* arch/arm/include/tiva, src/tiva, and configs/:  All files and all
	  all functions beginning with the name lm_ changed to tiva_
	  (2014-3-8).
	* configs/: Refresh all LM3/4/Tiva configurations (2014-3-9).
	* arch/arm/src/tiva/chip/tm4c_pinmap.h:  Add pin multiplex definitions
	  for the TM4C123 (2014-3-9).
	* arch/arm/src/tiva/chip/tm4c_memorymap.h:  Add memory map for the
	  TM4C123 (2014-3-9).
	* arch/arm/src/tiva/:  Add GPIO and SYCONTROL register bit defintions
	  for the TM4C123 (2014-3-10).
	* configs/tm4c123g-launchpad:  Add basic board support for the
	  TM4C123G-Launchpad (2014-3-10).
	* configs/sam4e-ek:  Add basic board support for the SAM4E-EK board.
	  More work is needed.  The initial commit is little more thatn the
	  SAM3U-EK with name changes (2014-3-10).
	* configs/spark: Refresh all spark configurations (2014-3-11).
	* arch/arm/src/tiva/chip/tm4c_memorymap.h:  Fix typos reported by
	  Daniel Pereira de Carvalho (2014-2-12).
	* arch/arm/src/sam34/sam_cmcc.c:  Add logic to manage the Cortex-M
	  Cache Control block.  Untested on initial check-in (2014-3-12).
